--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;900&display=swap');
+
+:root {
+  --primaryColor: #121213;
+  --secondaryColor: #565758;
+  --white: white;
+  --max-width: 500px;
+  font-family: 'Lato', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: var(--primaryColor);
+  color: var(--white);
+  height: 100vh;
+  width: 100%;
+}
+
+.main {
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+}
+
+.container {
+  max-width: var(--max-width);
+}
+
+.header {
+  height: 50px;
+  font-size: 40px;
+  font-weight: 900;
+  border-bottom: 1px solid var(--secondaryColor);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.header div:last-child {
+  justify-self: end;
+}
+
+.keyboard {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  height: 200px;
+  width: var(--max-width)
+}
+
+.square-grid {
+  display: flex;
+  flex: 1;
 }
