--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,27 @@ body {
   border-color: var(--correctColor);
 }
 
+.game-controls {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.game-controls button {
+  background-color: var(--keyBg);
+  border: none;
+  border-radius: 4px;
+  color: var(--white);
+  cursor: pointer;
+  user-select: none;
+  height: 3rem;
+  width: 6rem;
+  font-size: 20px;
+}
+
 
 @keyframes popout {
     from{
