--- a/src/index.css
+++ b/src/index.css
@@ -167,9 +167,10 @@ body {
   color: var(--white);
   cursor: pointer;
   user-select: none;
-  height: 3rem;
-  width: 6rem;
+  height: 4rem;
+  width: 8rem;
   font-size: 20px;
+  padding: 10px;
 }
 
 
