--- a/src/index.css
+++ b/src/index.css
@@ -19,15 +19,27 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
 body {
-  background: var(--primaryColor);
+  background-color: var(--primaryColor);
   color: var(--white);
-  height: 100vh;
   width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-y: hidden;
 }
 
 .w-100 {
-  width: 100%;
+  flex: 1.5 !important;
+  font-size: 12px !important;
 }
 
 .main {
@@ -40,48 +52,79 @@ body {
 }
 
 .container {
+  width: 100%;
   max-width: var(--maxWidth);
+  margin: 0 auto;
+  height: calc(100% - 50px);
+  display: flex;
+  flex-direction: column;
 }
 
-.header {
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: nowrap;
+  padding: 0px 20px;
   height: 50px;
-  font-size: 40px;
-  font-weight: 900;
+  color: #ffffff;
   border-bottom: 1px solid var(--secondaryColor);
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
 }
 
-.header div:last-child {
-  justify-self: end;
+.header-title {
+  flex-grow: 2;
+  font-weight: 700;
+  font-size: 28px;
+  letter-spacing: 0.01em;
+  text-align: left;
+  left: 0;
+  right: 0;
+  pointer-events: none;
+  position: relative;
+  text-align: center;
 }
 
 .keyboard {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  bottom: 0;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* position: fixed; */
+  /* bottom: 0; */
   height: 200px;
-  width: var(--maxWidth);
-  gap: 6px;
-  padding: 0 13px;
+  /* width: var(--maxWidth); */
+  /* gap: 6px; */
+  /* padding: 0 13px; */
+  margin: 0 8px;
+}
+
+.spacer {
+  flex: 0.5;
 }
 
 .keyboard-row {
   display: flex;
-  gap: 6px;
-  justify-content: center;
+  width: 100%;
+  margin: 0 auto 8px;
+  touch-action: manipulation;
 }
 
 .keyboard-key {
-  min-width: 42px;
+  font-family: inherit;
+  font-weight: bold;
+  border: 0;
+  padding: 0;
+  margin: 0 6px 0 0;
   height: 58px;
-  background-color: var(--keyBg);
-  border: none;
   border-radius: 4px;
-  color: var(--white);
   cursor: pointer;
   user-select: none;
+  background-color: var(--keyBg);
+  color: var(--white);
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
 }
 
 .keyboard-key.absent {
@@ -101,6 +144,9 @@ body {
 .grid-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  overflow: hidden;
 }
 
 .square-grid {
